# ansari-whatsapp

./: .env.example  .gitignore  AWS_SSM_PARAMETERS.md  CLAUDE.md  Dockerfile  README.md  clean_logs.sh  pyproject.toml  pytest.ini
.github/workflows/: deploy-production.yml  deploy-staging.yml  deploy.yml  perform-tests.yml
docs/hld/: architecture.md
docs/lld/: implementation_guide.md
docs/lld/aws/: README.md  aws-cli.md  concepts.md  deployment_guide.md  github_actions_setup.md  instance-role-parameters-access.json  setup_history.md
docs/lld/github_actions/: README.md  concepts.md  current_setup.md  setup_commands.md  setup_history.md
docs/lld/ide_ai_setup_vscode/: ansari-whatsapp-backend.code-workspace  doc_related_instructions.md
docs/lld/meta/: check_meta_subscriptions.py  meta_whatsapp_api_structure_of_a_user_incoming_msg.json
docs/sample_backend_responses/: sample_ansari_llm_response.txt
docs/whatsapp_migration_plan/: migration_plan.md
src/ansari_whatsapp/: __init__.py
src/ansari_whatsapp/app/: __init__.py  main.py
src/ansari_whatsapp/presenters/: whatsapp_message_formatter.py
src/ansari_whatsapp/services/: __init__.py  ansari_client_base.py  ansari_client_mock.py  ansari_client_real.py  meta_api_service_base.py  meta_api_service_mock.py  meta_api_service_real.py  meta_service_provider.py  service_provider.py  whatsapp_conversation_manager.py
src/ansari_whatsapp/utils/: app_logger.py  config.py  exceptions.py  general_helpers.py  language_utils.py  time_utils.py  whatsapp_message_splitter.py  whatsapp_webhook_parser.py  whatsapp_webhook_utils.py
tests/: README.md  __init__.py  test_utils.py  test_whatsapp_service.py
