[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansari-whatsapp"
version = "0.1.0"
description = "WhatsApp integration for the Ansari AI assistant to enhance understanding and practice of Islam."
authors = [
    { name = "Ansari Project", email = "feedback@ansari.chat" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.95.1",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "rich>=10.0.0",
    "uvicorn>=0.22.0",
    "watchfiles>=1.0.5",
]

[project.urls]
Homepage = "https://github.com/ansari-project/ansari-whatsapp"
Documentation = "https://github.com/ansari-project/ansari-whatsapp"
Source = "https://github.com/ansari-project/ansari-whatsapp"
Tracker = "https://github.com/ansari-project/ansari-whatsapp/issues"

[tool.ruff]
line-length = 127
indent-width = 4
target-version = "py310"
lint.select = ["E", "F"]
lint.fixable = ["ALL"]
lint.ignore = [
    "D100",   # ignore missing docs
    "E402",   # false positives for local imports
]
lint.mccabe.max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
